# qol_backend_api

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  ENVIRONMENT_SETUP.md  README.md  app.env.example  docker-compose.yml  entrypoint.sh  hello_world.py  pyproject.toml  pytest.ini  startup_with_testing.sh
.devcontainer/: devcontainer.json
app/: main.py
app/api/: schemas.py
app/api/routes/: user_dict.py
app/backend/: auth.py  service.py
app/database/: config.py  models.py  repository.py
config/: app.env  app.env.example  apt-build-packages.txt  apt-build-packages.txt.example  apt-runtime-packages.txt  apt-runtime-packages.txt.example  db.env  db.env.example  dev.env  dev.env.example  python-dev-packages.txt  python-dev-packages.txt.example
dev/: Dockerfile.local.dev.example  db.env  db.local.env.example  dev.env  dev.local.env.example  docker-compose.dev.db-override.yml  docker-compose.dev.yml  docker-compose.prod.db-override.yml
dev_example/.devcontainer/: devcontainer.json
dev_example/dev/: Dockerfile.dev  docker-compose.dev.db-override.yml  docker-compose.dev.yml  prepare-offline.sh
docs/: 01-installation.md  02-configuration.md  03-architecture.md  04-testing.md  05-conventions.md  05-development-guide.md  06-configuration.md  DEVELOPER_CONFIG.md
src/: app.py  main.py
src/api/: user_dict.py
src/backend/: service.py
src/database/: config.py  models.py  repository.py
tests/: README.md  __init__.py  conftest.py  database_utils.py  test_api.py  test_database.py  test_db_inspect.py
