[tool.poetry]
name = "qol-backend-api"
version = "0.1.0"
description = "Quest of Life Backend API"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.0"
aiomysql = "^0.2.0"
pydantic = "^2.11.7"
python-dotenv = "^1.0.0"
httpx = "^0.28.1"
cryptography = "*"

[tool.poetry.group.testing.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^9.3.0"
debugpy = "^1.8.15"
pylint = "^3.0.0"
mypy = "^1.8.0"
ruff = "^0.12.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 