[tool.poetry]
name = "qol-backend-api"
version = "0.1.0"
description = "Quest of Life Backend API"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.0"
aiomysql = "^0.2.0"
pydantic = "^2.11.7"
httpx = "^0.28.1"
cryptography = "^45.0.5"

[tool.poetry.group.testing.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.1.0"

# Development dependencies are managed through .devpackages
# See docs/DEVELOPER_CONFIG.md for details

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 